Fix page alignment
The alignment of the page was off. Enclosed are the fixes.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     display:flex;
     flex-direction:column;
     justify-content:space-between;
+    align-items:center;
     flex:1;
 }
 
@@ -62,6 +63,6 @@ p {
     font-family:"Pemanka";
     font-size:16px;
     font-weight:bold;
-    
+
 }
 
